syntax = "proto3";
package reserve.auction.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/onomyprotocol/reserve/x/auction/types";

// AuctionStatus enumerates the valid auction status.
enum AuctionStatus {
    // AUCTION_STATUS_UNSPECIFIED defines unknow auction status default is active.
    AUCTION_STATUS_UNSPECIFIED= 0;
    // AUCTION_STATUS_ACTIVE defines auction active status.
    AUCTION_STATUS_ACTIVE= 1;
    // AUCTION_STATUS_FINISHED defines auction finished reaching target goal.
    AUCTION_STATUS_FINISHED = 2;
    // AUCTION_STATUS_EXPIRED defines auction reach end time without reaching target goal.
    AUCTION_STATUS_EXPIRED = 3;
    // AUCTION_STATUS_OUT_OF_COLLATHERAL defines auction out of collatheral.
    AUCTION_STATUS_OUT_OF_COLLATHERAL = 4;
  }

// Auction struct
message Auction {
  // for simplicity, will use vault id that start the auction as auction id
  uint64 auction_id = 3;

  // starting price (currently only support usd stable token)
  string initial_price = 4 [ (cosmos_proto.scalar) = "cosmos.Dec" ];

  // items defines liquidate assets
  cosmos.base.v1beta1.Coin item = 5
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // current_rate defines the rate compare with the initial price
  string current_rate = 6 [ (cosmos_proto.scalar) = "cosmos.Dec" ];

  // last_discount_time defines the last time a discount has been apply
  google.protobuf.Timestamp last_discount_time = 7 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  cosmos.base.v1beta1.Coin token_raised = 8 [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // status defines auction current status
  AuctionStatus status = 9;

  // target_goal defines the debt the auction is trying to recover
  cosmos.base.v1beta1.Coin target_goal = 10 [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // vault_id defines id of auction vault
  uint64 vault_id = 11;
}

// Bid defines bid entry
message Bid {
  // id of bid
  uint64 bid_id = 1;
  
  // bidder address
  string bidder = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // bidding amount
  cosmos.base.v1beta1.Coin amount = 3
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
  
  // recive_price defines the price that the bid is willing to pay
  string recive_price = 4 [ (cosmos_proto.scalar) = "cosmos.Dec" ];

  // maxReceive maximum receive-able amount
  cosmos.base.v1beta1.Coin max_receive = 5
  [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  bool is_handle = 6;

  // index in auction bid_queue
  uint64 index = 7;
}

// BidQueue defines a list of bid entries for a single auction sorted by insertion time
message BidQueue {
  // bidder address
  uint64 auction_id = 1;

  // array of bid entries with bidder address
  repeated Bid bids = 2;
}

// Bids defines a list of bid entries
message Bids {
  // array of bid entries with bidder address
  repeated Bid bids = 1;
}